--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -37,6 +37,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Fetch all history for git operations
+          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
 
       - name: Modify values file
         shell: bash
@@ -53,7 +54,6 @@ jobs:
         with:
           message: 'Updates values.yaml with commit ${{ '${{ needs.ci.outputs.commit_id }}' }}'
           pull: true  # Pull latest changes before committing
-          pull_strategy: merge  # Handle merge conflicts
 
       - name: Install argocd CLI
         shell: bash
