--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Fetch all history for git operations
-          token: ${{ secrets.AUTH_GITHUB_TOKEN }}
+          token: ${{ '${{ secrets.GITHUB_TOKEN }}' }} 
 
       - name: Modify values file
         shell: bash
