--- a/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
+++ b/python-app/template/.github/workflows/${{values.app_name}}-cicd.yaml
@@ -34,31 +34,24 @@ jobs:
     needs: ci
     runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0  # Fetch all history for git operations
-          token: ${{ '${{ secrets.AUTH_GITHUB_TOKEN }}' }} 
+
+      - uses: actions/checkout@v4
 
       - name: Modify values file
         shell: bash
         run: |
-          echo ${{ '${{ needs.ci.outputs.commit_id }}' }}
-          # Install yq if not already available
-          if ! command -v yq &> /dev/null; then
-            pip install yq
-          fi
-          yq -Yi '.image.tag = "${{ '${{ needs.ci.outputs.commit_id }}' }}"' charts/${{ values.app_name }}/values-${{ values.app_env }}.yaml
+          echo ${{ '${{needs.ci.outputs.commit_id}}' }}
+          pip install yq
+          yq -Yi '.image.tag = "${{'${{needs.ci.outputs.commit_id}}' }}"' charts/${{values.app_name}}/values-${{values.app_env}}.yaml
 
       - name: Commit changes
         uses: EndBug/add-and-commit@v9
         with:
-          message: 'Updates values.yaml with commit ${{ '${{ needs.ci.outputs.commit_id }}' }}'
-          pull: true  # Pull latest changes before committing
+          message: 'Updates values.yaml with commit ${{ '${{needs.ci.outputs.commit_id}}' }}'
 
-      - name: Install argocd CLI
+      - name: Install argocd
         shell: bash
         run: |
-          # Download ArgoCD CLI from official source
           curl -sSL -o argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           chmod +x argocd
           sudo mv argocd /usr/local/bin/
@@ -66,47 +59,39 @@ jobs:
       - name: argocd login
         shell: bash
         run: |
-          # Try to discover ArgoCD server address
+          # Uses existing kubeconfig on the self-hosted runner
           if kubectl get svc argocd-server -n argocd &> /dev/null; then
-            # Use in-cluster service
-            argocd login argocd-server.argocd.svc.cluster.local \
-              --insecure \
-              --grpc-web \
-              --username admin \
-              --password ${{ '${{ secrets.ARGOCD_PASSWORD }}' }}
+            ARGOSRV="argocd-server.argocd.svc.cluster.local"
           else
-            # Fallback to external access
-            argocd login argocd-server.argocd \
-              --insecure \
-              --grpc-web \
-              --username admin \
-              --password ${{ '${{ secrets.ARGOCD_PASSWORD }}' }}
+            ARGOSRV="argocd-server.argocd"
           fi
+          argocd login "$ARGOSRV" \
+            --insecure \
+            --grpc-web \
+            --username admin \
+            --password "${{ secrets.ARGOCD_PASSWORD }}"
 
       - name: Ensure argocd repo and app
         shell: bash
         run: |
-          # Connects the argocd repo
-          repo="https://github.com/obilotiti-com/${{ values.app_name }}.git"
-          if ! argocd repo list | grep -q "$repo"; then
-            argocd repo add "$repo"
-          fi
 
-          # Creates the argocd app if it doesn't exist
-          if ! argocd app get "${{ values.app_name }}"; then
-            argocd app create "${{ values.app_name }}" \
-              --repo "$repo" \
-              --path "charts/${{ values.app_name }}" \
-              --dest-namespace "${{ values.app_env }}" \
-              --dest-server "https://kubernetes.default.svc" \
-              --values "values-${{ values.app_env }}.yaml" \
-              --revision master \
-              --sync-policy manual \
-              --sync-option CreateNamespace=true
-          fi
+          # Connects the argocd repo
+          repo="https://github.com/obilotiti-com/${{values.app_name}}.git"
+          argocd repo list | grep -q $repo || argocd repo add $repo
+
+          # Creates the argocd app
+          argocd app get ${{values.app_name}} || argocd app create ${{values.app_name}} \
+            --repo $repo \
+            --path charts/${{values.app_name}} \
+            --dest-namespace ${{values.app_env}} \
+            --dest-server https://kubernetes.default.svc \
+            --values values-${{values.app_env}}.yaml \
+            --revision master \
+            --sync-policy manual \
+            --sync-option CreateNamespace=true
 
       - name: Argocd app sync
         shell: bash
         run: |
-          argocd app sync "${{ values.app_name }}"
-          argocd app wait "${{ values.app_name }}" --timeout 180
+          argocd app sync ${{values.app_name}}
+          argocd app wait ${{values.app_name}} --timeout 180
