--- a/python-app/template/charts/${{values.app_name}}/values.yaml
+++ b/python-app/template/charts/${{values.app_name}}/values.yaml
@@ -1,6 +1,6 @@
 replicaCount: 1
 image:
-  repository: OBILOTITI22/${{values.app_name}}
+  repository: obilotiti-com/${{values.app_name}}
   pullPolicy: IfNotPresent
   tag: ${{values.app_name}}-${{values.app_env}}-latest
 imagePullSecrets: []
